<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_edit_title"
        style="@style/ChartTitleText.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_mole"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/dialog_edit_remove"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="4dp"
        android:tint="@color/mm_warm_grey"
        app:srcCompat="@drawable/vic_delete_black_24dp"
        tools:src="@drawable/vic_delete_black_24dp"
    />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/dialog_edit_mole_icon"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_title"
        android:layout_margin="4dp"
        app:srcCompat="@drawable/vic_mole_20dp"
        tools:src="@drawable/vic_mole_20dp"
    />

    <android.support.v7.widget.AppCompatEditText
        android:minHeight="48dp"
        android:id="@+id/dialog_edit_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_edit_title"
        android:layout_marginRight="48dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/dialog_edit_mole_icon"
        android:padding="4dp"
        android:hint="@string/unnamed_mole"
    />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_edit_edittext"
        android:background="@color/mm_med_gray"
    />

    <android.support.v7.widget.AppCompatTextView
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/dialog_mole_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/mm_colorPrimary"
        android:layout_below="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
    />

    <android.support.v7.widget.AppCompatTextView
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/dialog_mole_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:layout_below="@+id/view"
        android:drawablePadding="20dp"
        android:minWidth="48dp"
        android:layout_marginLeft="4dp"
        android:drawableLeft="@drawable/ic_arrow_left_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
    />

</RelativeLayout>